--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="./img/logo.png" alt="Logo do site">
+        <img class="cabecalho-imagem" src="./img/logo.png" alt="https://www.canva.com/design/DAGBi5EWiqs/8KQ219TvKatetR3e0kdACA/edit?utm_content=DAGBi5EWiqs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
         <ul class="cabecalho-lista-item">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudantes</li>
