--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <header class="cabecalho">
-        <img class="cabecalho-imagem" src="./img/logo.png" alt="https://github.com/Cecilia2707/site-escola280/blob/1f9515442cfacad5b9dc24cc07b57a2986e1e024/oasis.png">
+ <h1>Oasis Do Saber</h1>
         <ul class="cabecalho-lista-item">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudantes</li>
